# HoosierHelp

./: .gitignore  README.md  main.py  playground.py  pyproject.toml
agent/: __init__.py  agent.py  llm.py
agent211/: __init__.py  agent.py  cli.py  evaluation.py  index.py  llm.py  models.py  planner.py  search.py  tool.py
data/: sample_hsds.json
data/benchmark/: case_specs.json  dataset_report.md  filtered_resources_raw.csv  filtered_resources_tagged.csv  user_cards.json  user_specs_dev_50.json  user_specs_test_50.json  user_specs_train_100.json
data/benchmark_builder/: 0_1_resources_stat.ipynb  1_1_user_stat.ipynb  1_build_user_specs.py  2_build_user_cards.py  build_benchmark_data.py  build_user_cards.py  build_user_spec_splits.py  build_user_specs.py  resource_filter.py  user_spec_generation.py
data/benchmark_builder/analysis/: resources_stat.ipynb  user_stat.ipynb
data/indiana211/: README.json  README.md  indiana211_counties.csv
data/indiana211/benchmark_curated/: benchmark_resource_pool_curated.csv  (+1 more)
eval/: __init__.py  agent_instructions.py  analyze_run.py  build_benchmark_data.py  compare_algorithm_runs.py  llm_user.py  metrics.py  run_eval.py  simulated_user.py  spec_generation.py  tool_call_backends.py  tool_call_eval.py  tool_call_parsers.py  tool_call_prompts.py  tool_call_schema.py
hsds_agent/: __init__.py  agent.py  cli.py  database.py  llm.py  models.py  tools.py
notebooks/: agent211_playground.ipynb  indiana211_benchmark_cleaning.ipynb
scripts/: analyze_tool_call_run.py  smoke_openrouter.py
tests/: test_agent.py  test_agent211.py
tools/: __init__.py  curated_categories.py  indiana211.py  indiana211_models.py  indiana211_schedule.py  indiana211_tags.py
train/: __init__.py  build_teacher_samples.py  build_turn_samples.py  common.py  grpo.py  opsd.py
